--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="senha">Senha:</string>
     <string name="usuario">Usuário:</string>
     <string name="login">Login</string>
+    <string name="cadastrar">Cadastrar</string>
     <string name="imagem">Imagem</string>
 
     <!-- TODO: Remove or change this placeholder text -->
